--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -6,7 +6,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #4564a4;
+  --ifm-color-primary: #45a484;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
   --ifm-color-primary-darkest: #205d3b;
@@ -19,8 +19,8 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #a4c1fc;
-  --ifm-color-primary-dark: #a4c1fc;
+  --ifm-color-primary: #a4fcba;
+  --ifm-color-primary-dark: #a4fced;
   --ifm-color-primary-darker: #1fa588;
   --ifm-color-primary-darkest: #1a8870;
   --ifm-color-primary-light: #29d5b0;
