--- a/packages/pixel_ui/src/canvas/metadata/metadataForm copy.css
+++ b/packages/pixel_ui/src/canvas/metadata/metadataForm copy.css
@@ -1,5 +1,8 @@
 .metadata-form-container {
- 
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    z-index: 9999;
   }
   
   .metadata-form-toggle {
@@ -23,7 +26,7 @@
     bottom: 100%;
     right: 0;
     margin-bottom: 0.5rem;
-    width: 25rem;
+    width: 30rem;
     /* background-color: white; */
     border-radius: 0.8rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
