--- a/apps/website/src/app/index.css
+++ b/apps/website/src/app/index.css
@@ -11,7 +11,7 @@
     93.36deg,
     #4564a4 -4.11%,
     #b3bfda 40.24%,
-    #ffffff 71.14%
+    transparent 71.14%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
