wip pwa and mobile

--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -146,7 +146,7 @@ a {
   margin-left: $sidebar-width;
   min-height: 100vh;
   width: calc(100% - $sidebar-width);
-  padding: 2rem;
+  // padding: 0.25rem;
   background-color: var(--background);
   transition: margin-left 0.3s ease-in-out;
 
