--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -1,7 +1,7 @@
 @import './launchpad.scss';
 @import './loading.scss';
 @import './animations.scss';
-
+@import './components/_button.scss';
 // Basic variables
 $sidebar-width: 250px;
 $mobile-breakpoint: 768px;
