--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -43,6 +43,7 @@ $header-height: 60px;
   --sidebar-bg: var(--shade-50);
   --header-bg: var(--shade-50);
   --card-bg: var(--shade-50);
+  --contrast-background: var(--shade-50);
 }
 
 // Dark mode
@@ -68,6 +69,8 @@ $header-height: 60px;
   --sidebar-bg: var(--shade-50);
   --header-bg: var(--shade-50);
   --card-bg: var(--shade-100);
+  --contrast-background: var(--shade-50);
+
 }
 
 // Contrast colors (light on dark, dark on light)
