--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import './loading.scss';
 @import './animations.scss';
 @import './components/_button.scss';
+@import './components/_input.scss';
 // Basic variables
 $sidebar-width: 250px;
 $mobile-breakpoint: 768px;
