--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import './animations.scss';
 @import './components/_button.scss';
 @import './components/_input.scss';
+@import './components/_editor.scss';
 // Basic variables
 $sidebar-width: 250px;
 $mobile-breakpoint: 768px;
