--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import './components/_button.scss';
 @import './components/_input.scss';
 @import './components/_editor.scss';
+@import './nostr/feed.scss';
 // Basic variables
 $sidebar-width: 250px;
 $mobile-breakpoint: 768px;
@@ -246,9 +247,15 @@ a {
   border-right: 1px solid var(--border);
   background-color: var(--sidebar-bg);
   z-index: 1000;
-  overflow-y: auto;
   transition: transform 0.3s ease-in-out, background-color 0.2s ease-in-out;
 
+  // overflow-y: auto;
+  // &::-webkit-scrollbar {
+  //   display: none;
+  // }
+  
+  // -ms-overflow-style: none;  /* IE and Edge */
+  // scrollbar-width: none;  /* Firefox */
   @media (max-width: $mobile-breakpoint) {
     transform: translateX(-100%);
     width: 80%;
@@ -278,7 +285,14 @@ a {
   display: flex;
   flex-direction: column;
   height: 100%;
+  // overflow-y: auto;
   overflow-y: auto;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .sidebar-nav-header {
