--- a/apps/pwa/src/components/Nostr/feed/feed.scss
+++ b/apps/pwa/src/components/Nostr/feed/feed.scss
@@ -10,7 +10,7 @@
     display: flex;
     overflow-x: auto;
     border-radius: 0.5rem;
-    padding: 0.25rem;
+    // padding: 0.25rem;
     margin-bottom: 1rem;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
     scrollbar-width: none; // Firefox
