--- a/apps/pwa/src/styles/nostr/feed.scss
+++ b/apps/pwa/src/styles/nostr/feed.scss
@@ -56,16 +56,17 @@
   &__content {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    // gap: 1rem;
+    // gap: 0.25rem;
   }
 
   &__card {
     // background-color: var(--card-bg, white);
-    border-radius: 0.5rem;
+    border-radius: 0.1rem;
     padding: 1rem;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
     // border: 1px solid var(--border-color, #e5e7eb);
-    // border-bottom: 1px solid var(--border-color, #e5e7eb);
+    border: 1px solid var(--border-color, var(--card-bg-constrast));
     // border: 1px 0 0 3px solid var(--border-color, #e5e7eb);
     transition: box-shadow 0.2s ease;
 
@@ -137,7 +138,8 @@
   &__layout {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 1rem;
+    // gap: 1rem;
+    gap: 0.5rem;
     
     @media (min-width: 768px) {
       grid-template-columns: minmax(200px, 1fr) minmax(0, 2fr);
