--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -5,6 +5,7 @@
 @import './components/_input.scss';
 @import './components/_editor.scss';
 @import './nostr/feed.scss';
+@import './components/_cashu-wallet.scss';
 // Basic variables
 $sidebar-width: 250px;
 $sidebar-width-right: 30%;
