--- a/apps/pwa/src/styles/main.scss
+++ b/apps/pwa/src/styles/main.scss
@@ -4,3 +4,7 @@
 @import './components/toast'; 
 @import './index.scss'; 
 @import 'quill/dist/quill.snow.css';
+@import 'animations.scss';
+@import 'loading.scss';
+@import 'launchpad.scss';
+@import 'components/_cashu-wallet.scss';
