--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -6,6 +6,7 @@
 @import './components/_editor.scss';
 @import './nostr/feed.scss';
 @import './components/_cashu-wallet.scss';
+@import './cashu.css';
 // Basic variables
 $sidebar-width: 250px;
 $sidebar-width-right: 30%;
