--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -7,6 +7,15 @@
 @import './nostr/feed.scss';
 @import './components/_cashu-wallet.scss';
 @import './cashu.css';
+@import './components/modal';
+@import './components/toast'; 
+@import 'quill/dist/quill.snow.css';
+@import 'animations.scss';
+@import 'loading.scss';
+@import 'launchpad.scss';
+@import 'components/_cashu-wallet.scss';
+
+
 // Basic variables
 $sidebar-width: 250px;
 $sidebar-width-right: 30%;
@@ -158,6 +167,7 @@ input {
 
 span {
   color: var(--contrast-900);
+  // font-size: 1.25rem;
 }
 
 p {
@@ -165,6 +175,7 @@ p {
   color: var(--contrast-900);
   margin-bottom: 1rem;
   line-height: 1.5;
+  font-size: 1.5rem;
 }
 
 input {
