--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -136,9 +136,26 @@ html, body {
 }
 
 // Typography
-h1, h2, h3, h4, h5, h6 {
+h1 {
   color: var(--contrast-900);
   margin-bottom: 1rem;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+// Typography
+h2 {
+  color: var(--contrast-900);
+  margin-bottom: 1rem;
+  font-size: 1.75rem;
+  font-weight: 500;
+}
+
+h3, h4, h5, h6 {
+  color: var(--contrast-900);
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  font-weight: 300;
 }
 
 div {
@@ -167,15 +184,15 @@ input {
 
 span {
   color: var(--contrast-900);
-  // font-size: 1.25rem;
+  font-size: 0.75rem;
 }
 
 p {
   // color: var(--foreground);
   color: var(--contrast-900);
-  margin-bottom: 1rem;
+  // margin-bottom: 1rem;
   line-height: 1.5;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 input {
