--- a/apps/pwa/src/styles/components/_modal.scss
+++ b/apps/pwa/src/styles/components/_modal.scss
@@ -21,7 +21,8 @@
     position: fixed;
     inset: 0;
     overflow-y: auto;
-    z-index: 50;
+    // z-index: 50;
+    z-index: 1100;
     padding: 1rem;
   }
 
