--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -64,6 +64,7 @@ $header-height: 60px;
 // Dark mode
 .dark-mode {
   // Invert shade colors for dark mode
+  --shade-50-bg: #0f172a;
   --shade-50: #0f172a;
   --shade-100: #1e293b;
   --shade-200: #334155;
