--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -14,6 +14,7 @@
 @import 'loading.scss';
 @import 'launchpad.scss';
 @import 'components/_cashu-wallet.scss';
+@import 'components/nostr-form.scss';
 
 
 // Basic variables
