--- a/apps/pwa/src/styles/components/_modal.scss
+++ b/apps/pwa/src/styles/components/_modal.scss
@@ -23,7 +23,7 @@
     overflow-y: auto;
     // z-index: 50;
     z-index: 1100;
-    padding: 1rem;
+    padding: 0.25rem;
   }
 
   &__content {
@@ -31,7 +31,7 @@
     min-height: 100%;
     align-items: center;
     justify-content: center;
-    padding: 1rem;
+    // padding: 1rem;
     text-align: center;
   }
 
